Updates datatypes parsed from config

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,15 +1,15 @@
 [Paths]
 # This folder should contain owl files of all ontologies in the training set
-train_folder = "/u/vivek98/VeeAlign/datasets/conference/ontologies/"
+train_folder = /u/vivek98/VeeAlign/datasets/conference/ontologies/
 # This folder should contain rdf alignment files of all ontologies in `ontologies_folder`
 # The alignments should be named `a-b.rdf` if it contains the alignments between `a.owl` and `b.owl`
-alignment_folder = "/u/vivek98/VeeAlign/datasets/conference/alignments/"
+alignment_folder = /u/vivek98/VeeAlign/datasets/conference/alignments/
 # Path where trained model should be saved/pre-trained model should be loaded
-model_path = "/u/vivek98/VeeAlign/conference_pretrained.pt"
+model_path = /u/vivek98/VeeAlign/conference_pretrained.pt
 
 [USE Embeddings]
 # Folder to load USE Embeddings from/save USE embeddings in
-USE_folder = "/u/vivek98/USE"
+USE_folder = /u/vivek98/USE
 
 [Preprocessing]
 # Whether or not to use spellcheck for preprocessing. 
