--- a/src/config.ini
+++ b/src/config.ini
@@ -14,7 +14,7 @@ USE_folder = /u/vivek98/USE
 [Preprocessing]
 # Whether or not to use spellcheck for preprocessing. 
 # Generally recommended, but set it to False if training data is domain specific (eg. biomedical)
-has_spellcheck = True
+has_spellcheck = False
 
 [Parameters]
 # Max neighbours to consider near a node
