--- a/src/config.ini
+++ b/src/config.ini
@@ -21,6 +21,8 @@ has_spellcheck = False
 max_neighbours = 34
 # Min neighbours a node should have to be considered
 min_neighbours = 1
+# Classification threshold
+threshold = 0.9
 
 [Hyperparameters]
 # Learning rate
