Path dependencies removed

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,15 +1,13 @@
 [Paths]
 # This folder should contain owl files of all ontologies in the training set
-train_folder = /data/Vivek/IBM/VeeAlign/datasets/conference/ontologies/
+train_folder = datasets/conference/ontologies/
 # This folder should contain rdf alignment files of all ontologies in `ontologies_folder`
 # The alignments should be named `a-b.rdf` if it contains the alignments between `a.owl` and `b.owl`
-alignment_folder = /data/Vivek/IBM/VeeAlign/datasets/conference/alignments/
+alignment_folder = datasets/conference/alignments/
 # Path where trained model should be saved/pre-trained model should be loaded
-model_path = /data/Vivek/IBM/VeeAlign/conference_pretrained.pt
-
-[USE Embeddings]
-# Folder to load USE Embeddings from/save USE embeddings in
-USE_folder = /home/vlead/USE
+model_path = models/conference_pretrained.pt
+# Path where final alignments should be saved
+output_folder = output/
 
 [Preprocessing]
 # Whether or not to use spellcheck for preprocessing. 
