Finished updating main.py used for sliding window; debugging left

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,3 +1,14 @@
+[General]
+# Language of dataset
+language = en
+# Value of K in K-fold sliding window evaluation
+K = 7
+# Determines if training data should be split on ontology level (True) or on element level (False)
+# Set to True if you wish to train and test on ontology pairs, or False otherwise (recommended),  as in most cases.
+ontology_split = True
+# Max number of false (dissimilar) examples to take while training
+max_false_examples = 150000
+
 [Paths]
 # This folder should contain owl files of all ontologies in the training set
 train_folder = datasets/conference/ontologies/
@@ -12,14 +23,19 @@ output_folder = output/
 [Preprocessing]
 # Whether or not to use spellcheck for preprocessing. 
 # Generally recommended, but set it to False if training data is domain specific (eg. biomedical)
+# or in a non-English language 
 has_spellcheck = False
 
 [Parameters]
 # Max neighbours to consider near a node
-max_neighbours = 34
+max_paths = 2
 # Min neighbours a node should have to be considered
-min_neighbours = 1
-# Classification threshold
+max_pathlen = 26
+# Determines if one-hop neighbours should be taken as a path of length 1 or as a bag of neighbours
+bag_of_neighbours = True
+# Determines if weighted average should be used to obtain unified path representation, or max pooling should be used
+weighted_average = True
+# Default classification threshold
 threshold = 0.9
 
 [Hyperparameters]
@@ -28,4 +44,4 @@ lr = 0.001
 # Number of training epochs
 num_epochs = 50
 weight_decay = 0.001
-batch_size = 10
+batch_size = 32
