Ready to run on CCC

--- a/src/config.ini
+++ b/src/config.ini
@@ -24,7 +24,7 @@ output_folder = output/
 # Whether or not to use spellcheck for preprocessing. 
 # Generally recommended, but set it to False if training data is domain specific (eg. biomedical)
 # or in a non-English language 
-has_spellcheck = True
+has_spellcheck = False
 
 [Parameters]
 # Max neighbours to consider near a node
