--- a/src/config.ini
+++ b/src/config.ini
@@ -1,20 +1,20 @@
 [General]
 # Language of dataset
-language = en
+language = de
 # Value of K in K-fold sliding window evaluation
-K = 7
+K = 5
 # Determines if training data should be split on ontology level (True) or on element level (False)
 # Set to True if you wish to train and test on ontology pairs, or False otherwise (recommended),  as in most cases.
-ontology_split = True
+ontology_split = False
 # Max number of false (dissimilar) examples to take while training
 max_false_examples = 150000
 
 [Paths]
 # This folder should contain owl files of all ontologies in the training set
-train_folder = datasets/conference/ontologies/
+train_folder = datasets/lebensmittel/ontologies/
 # This folder should contain rdf alignment files of all ontologies in `ontologies_folder`
 # The alignments should be named `a-b.rdf` if it contains the alignments between `a.owl` and `b.owl`
-alignment_folder = datasets/conference/alignments/
+alignment_folder = datasets/lebensmittel/alignments/
 # Path where trained model should be saved/pre-trained model should be loaded
 model_path = models/conference_pretrained.pt
 # Path where final alignments should be saved
