--- a/requirements.txt
+++ b/requirements.txt
@@ -2,37 +2,26 @@
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
 _libgcc_mutex=0.1=main
-ca-certificates=2020.1.1=0
-certifi=2020.4.5.1=py38_0
-cffi=1.14.0=py38he30daa8_1
-chardet=3.0.4=py38_1003
-conda=4.8.3=py38_0
-conda-package-handling=1.6.1=py38h7b6447c_0
-cryptography=2.9.2=py38h1ba5d50_0
-idna=2.9=py_1
+ca-certificates=2020.7.22=0
+certifi=2020.6.20=py37_0
+future=0.18.2=pypi_0
 ld_impl_linux-64=2.33.1=h53a641e_7
-libedit=3.1.20181209=hc058e9b_0
-libffi=3.3=he6710b0_1
+libedit=3.1.20191231=h14c3975_1
+libffi=3.3=he6710b0_2
 libgcc-ng=9.1.0=hdf63c60_0
 libstdcxx-ng=9.1.0=hdf63c60_0
 ncurses=6.2=he6710b0_1
 openssl=1.1.1g=h7b6447c_0
-pip=20.0.2=py38_3
-pycosat=0.6.3=py38h7b6447c_1
-pycparser=2.20=py_0
-pyopenssl=19.1.0=py38_0
-pysocks=1.7.1=py38_0
-python=3.8.3=hcff3b4d_0
+pillow=7.2.0=pypi_0
+pip=20.2.2=py37_0
+python=3.7.9=h7579374_0
 readline=8.0=h7b6447c_0
-requests=2.23.0=py38_0
-ruamel_yaml=0.15.87=py38h7b6447c_0
-setuptools=46.4.0=py38_0
-six=1.14.0=py38_0
-sqlite=3.31.1=h62c20be_1
-tk=8.6.8=hbc83047_0
-tqdm=4.46.0=py_0
-urllib3=1.25.8=py38_0
-wheel=0.34.2=py38_0
+setuptools=49.6.0=py37_0
+sqlite=3.33.0=h62c20be_0
+tensorflow-text=2.3.0=pypi_0
+tk=8.6.10=hbc83047_0
+torch=1.6.0=pypi_0
+torchvision=0.7.0=pypi_0
+wheel=0.35.1=py_0
 xz=5.2.5=h7b6447c_0
-yaml=0.1.7=had09818_2
 zlib=1.2.11=h7b6447c_3
