Updated train and test.py

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,7 +1,8 @@
 [General]
 # Language of dataset
 language = en
-# Value of K in K-fold sliding window evaluation
+# Value of K in K-fold sliding window in `evaluation.py`
+# Determines splitting of data into training (1-1/K) and validation (1/K) in `train.py`
 K = 7
 # Determines if training data should be split on ontology level (True) or on element level (False)
 # Set to True if you wish to train and test on ontology pairs, or False otherwise (recommended),  as in most cases.
@@ -15,8 +16,9 @@ train_folder = datasets/conference/ontologies/
 # This folder should contain rdf alignment files of all ontologies in `ontologies_folder`
 # The alignments should be named `a-b.rdf` if it contains the alignments between `a.owl` and `b.owl`
 alignment_folder = datasets/conference/alignments/
-# Path where trained model should be saved/pre-trained model should be loaded
-model_path = models/conference_pretrained.pt
+# Paths where trained model should be saved/pre-trained model should be loaded
+save_model_path = models/model.pt
+load_model_path = models/conference_pretrained.pt
 # Path where final alignments should be saved
 output_folder = output/
 
