--- a/src/config.ini
+++ b/src/config.ini
@@ -30,15 +30,13 @@ has_spellcheck = False
 
 [Parameters]
 # Max neighbours to consider near a node
-max_paths = 2
+max_paths = 3
 # Min neighbours a node should have to be considered
-max_pathlen = 26
+max_pathlen = 5
 # Determines if one-hop neighbours should be taken as a path of length 1 or as a bag of neighbours
-bag_of_neighbours = True
+bag_of_neighbours = False
 # Determines if weighted average should be used to obtain unified path representation, or max pooling should be used
-weighted_average = True
-# Default classification threshold
-threshold = 0.9
+weighted_average = False
 
 [Hyperparameters]
 # Learning rate
