--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,30 +1,334 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_ipyw_jlab_nb_ext_conf=0.1.0=py37_0
-_libgcc_mutex=0.1=main
-_tflow_select=2.3.0=mkl
-ca-certificates=2020.1.1=0
-certifi=2019.11.28=py37_0
-future=0.18.2=py37_0
-ld_impl_linux-64=2.33.1=h53a641e_7
-libedit=3.1.20181209=hc058e9b_0
-libffi=3.2.1=hd88cf55_4
-libgcc-ng=9.1.0=hdf63c60_0
-libstdcxx-ng=9.1.0=hdf63c60_0
-ncurses=6.2=he6710b0_0
-openssl=1.1.1d=h7b6447c_4
-pillow=7.0.0=py37hb39fc2d_0
-pip=20.0.2=py37_1
-python=3.7.6=h0371630_2
-pytorch=1.5.0=py3.7_cuda10.2.89_cudnn7.6.5_0
-readline=7.0=h7b6447c_5
-setuptools=45.2.0=py37_0
-sqlite=3.31.1=h7b6447c_0
-tensorflow=2.2.0=pypi_0
-tensorflow-hub=0.9.0=pyh831f99a_0
-tensorflow-text=2.2.0=pypi_0
-tk=8.6.8=hbc83047_0
-wheel=0.34.2=py37_0
-xz=5.2.4=h14c3975_4
-zlib=1.2.11=h7b6447c_3
+absl-py==0.10.0
+aio-pika==6.4.1
+aiormq==3.2.2
+alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.9.12
+anaconda-project==0.8.3
+argh==0.26.2
+asn1crypto==1.3.0
+astor==0.8.0
+astroid==2.3.3
+astropy==4.0
+astunparse==1.6.3
+atomicwrites==1.3.0
+atomium @ file:///home/conda/feedstock_root/build_artifacts/atomium_1588546892388/work
+attrs==19.3.0
+autopep8==1.4.4
+Babel==2.8.0
+backcall==0.1.0
+backports.functools-lru-cache==1.6.1
+backports.shutil-get-terminal-size==1.0.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+bcolz==1.2.1
+bcrypt==3.1.7
+beautifulsoup4==4.8.2
+bitarray==1.2.1
+bkcharts==0.2
+bleach==3.1.0
+blinker==1.4
+blis==0.4.1
+bokeh==1.4.0
+boto==2.49.0
+boto3==1.9.162
+botocore==1.12.189
+Bottleneck==1.3.2
+cachetools==3.1.1
+catalogue==1.0.0
+certifi==2020.6.20
+cffi==1.14.0
+chardet==3.0.4
+chest==0.2.3
+click==7.1.2
+cloudpickle==1.3.0
+clyent==1.2.2
+colorama==0.4.3
+conda==4.8.4
+conda-build==3.18.11
+conda-package-handling==1.7.0
+conda-verify==3.4.2
+contextlib2==0.6.0.post1
+cryptography==2.8
+cycler==0.10.0
+cymem==2.0.3
+Cython==0.29.14
+cytoolz==0.10.1
+dask==2.11.0
+DAWG-Python==0.7.2
+decorator==4.4.1
+deeppavlov==0.11.0
+defusedxml==0.6.0
+diff-match-patch==20181111
+distributed==2.11.0
+docopt==0.6.2
+docutils==0.16
+en-core-web-sm==2.2.5
+entrypoints==0.3
+et-xmlfile==1.0.1
+fastapi==0.47.1
+fastcache==1.1.0
+filelock==3.0.12
+flake8==3.7.9
+Flask==1.1.1
+fsspec==0.6.2
+future==0.18.2
+gast==0.3.3
+gdown @ file:///home/conda/feedstock_root/build_artifacts/gdown_1595454446223/work
+gensim==3.8.0
+gevent==1.4.0
+glob2==0.7
+gmpy2==2.0.8
+google-api-core==1.17.0
+google-auth==1.14.1
+google-auth-oauthlib==0.4.1
+google-cloud-core==1.3.0
+google-cloud-storage==1.28.0
+google-pasta==0.2.0
+google-resumable-media==0.5.0
+googleapis-common-protos==1.51.0
+googletrans==2.4.0
+greenlet==0.4.15
+grpcio==1.27.2
+h11==0.9.0
+h5py==2.10.0
+HeapDict==1.0.1
+html5lib==1.0.1
+httptools==0.0.13
+hunspell==0.5.5
+hypothesis==5.5.4
+idna==2.8
+imageio==2.6.1
+imagesize==1.2.0
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1591451751445/work
+intervaltree==3.0.2
+ipykernel==5.1.4
+ipython==7.12.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isodate==0.6.0
+isort==4.3.21
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.14.1
+jeepney==0.4.2
+Jinja2==2.11.1
+jmespath==0.9.4
+joblib==0.14.1
+json5==0.9.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.1
+jupyterlab==1.2.6
+jupyterlab-server==1.0.6
+keepalive==0.5
+kenlm==0.0.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+keyring==21.1.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+libarchive-c==2.8
+lief==0.9.0
+llvmlite==0.31.0
+locket==0.2.0
+lxml==4.4.2
+Markdown==3.1.1
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+mccabe==0.6.1
+mdtraj==1.9.3
+mistune==0.8.4
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
+mock==4.0.1
+more-itertools==8.2.0
+mpmath==1.1.0
+msgpack==0.6.1
+multidict==4.7.6
+multipledispatch==0.6.0
+murmurhash==1.0.0
+navigator-updater==0.2.1
+nbconvert==5.6.1
+nbformat==5.0.4
+networkx==2.4
+nglview==2.7.5
+nltk==3.4.5
+nose==1.3.7
+notebook==6.0.3
+numba==0.48.0
+numexpr==2.7.1
+numpy==1.18.5
+numpydoc==0.9.2
+oauthlib==3.1.0
+olefile==0.46
+openpyxl==3.0.3
+opt-einsum==3.1.0
+orderedset==2.0.3
+overrides==2.7.0
+Owlready2 @ file:///home/conda/feedstock_root/build_artifacts/owlready2_1590665599864/work
+packaging==20.1
+pamqp==2.3.0
+pandas @ file:///tmp/build/80754af9/pandas_1598371486213/work
+pandocfilters==1.4.2
+paramiko==2.7.1
+parso==0.5.2
+partd==1.1.0
+path==13.1.0
+pathlib2==2.3.5
+pathtools==0.1.2
+patsy==0.5.1
+pep8==1.7.1
+pexpect==4.8.0
+pickleDB==0.9.2
+pickleshare==0.7.5
+Pillow==7.0.0
+pkginfo==1.5.0.1
+plac==0.9.6
+pluggy==0.13.1
+ply==3.11
+preshed==3.0.2
+prometheus-client==0.7.1
+prompt-toolkit==3.0.3
+protobuf==3.11.4
+psutil==5.6.7
+ptyprocess==0.6.0
+py==1.8.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pycairo==1.19.0
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pycurl==7.43.0.5
+pydantic==1.3
+pydocstyle==4.0.1
+pyflakes==2.1.1
+Pygments==2.5.2
+PyJWT==1.7.1
+pylint==2.4.4
+pymorphy2==0.8
+pymorphy2-dicts==2.4.393442.3710985
+pymorphy2-dicts-ru==2.4.404381.4453942
+PyNaCl==1.3.0
+pyodbc===4.0.0-unsupported
+pyOpenSSL==19.1.0
+pyparsing==2.4.6
+pyrsistent==0.15.7
+PySocks==1.7.1
+pyspellchecker==0.5.2
+pyTelegramBotAPI==3.6.7
+pytest==5.3.5
+pytest-arraydiff==0.3
+pytest-astropy==0.8.0
+pytest-astropy-header==0.1.2
+pytest-doctestplus==0.5.0
+pytest-openfiles==0.4.0
+pytest-remotedata==0.3.2
+python-dateutil==2.8.1
+python-jsonrpc-server==0.3.4
+python-language-server==0.31.7
+python-Levenshtein==0.12.0
+pytz==2020.1
+PyWavelets==1.1.1
+pyxdg==0.26
+PyYAML==5.3
+pyzmq==18.1.1
+QDarkStyle==2.8
+QtAwesome==0.6.1
+qtconsole==4.6.0
+QtPy==1.9.0
+rdflib @ file:///home/conda/feedstock_root/build_artifacts/rdflib_1588779858729/work
+regex==2020.7.14
+requests==2.22.0
+requests-oauthlib==1.3.0
+rmsd==1.3.2
+rope==0.16.0
+rsa==4.0
+Rtree==0.9.3
+ruamel-yaml==0.15.87
+rusenttokenize==0.0.5
+s3transfer==0.2.1
+sacremoses==0.0.35
+scikit-image==0.16.2
+scikit-learn==0.21.2
+scipy==1.4.1
+seaborn==0.10.0
+SecretStorage==3.1.2
+Send2Trash==1.5.0
+sent2vec==0.0.0
+sentence-transformers==0.3.0
+sentencepiece==0.1.91
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.15.0
+smart-open==2.0.0
+snowballstemmer==2.0.0
+sortedcollections==1.1.2
+sortedcontainers==2.1.0
+soupsieve==1.9.5
+spacy @ file:///home/conda/feedstock_root/build_artifacts/spacy_1589387598248/work
+SPARQLWrapper @ file:///home/conda/feedstock_root/build_artifacts/sparqlwrapper_1588887982619/work
+sparse-dot-topn==0.2.9
+Sphinx==2.4.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.2.0
+spyder==4.0.1
+spyder-kernels==1.8.1
+SQLAlchemy==1.3.13
+srsly @ file:///home/conda/feedstock_root/build_artifacts/srsly_1589222431475/work
+starlette==0.12.9
+statsmodels==0.11.0
+sympy==1.5.1
+tables==3.6.1
+tblib==1.6.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.6.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
+tensorflow-hub @ file:///home/conda/feedstock_root/build_artifacts/tensorflow-hub_1598286932655/work/wheel_dir/tensorflow_hub-0.9.0-py2.py3-none-any.whl
+tensorflow-text==2.3.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+thinc==7.4.0
+tokenizers==0.8.1rc1
+toolz==0.10.0
+torch==1.6.0
+torchvision==0.7.0
+tornado==6.0.3
+tqdm @ file:///tmp/build/80754af9/tqdm_1596810128862/work
+traitlets==4.3.3
+transformers==3.0.2
+ujson==1.35
+unicodecsv==0.14.1
+urllib3==1.25.8
+uvicorn==0.11.1
+uvloop==0.14.0
+valerius==0.2.0
+wasabi==0.6.0
+watchdog==0.10.2
+wcwidth==0.1.8
+webencodings==0.5.1
+websockets==8.1
+Werkzeug==1.0.0
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+wurlitzer==2.0.0
+xlrd==1.2.0
+XlsxWriter==1.2.7
+xlwt==1.3.0
+xmltodict==0.12.0
+yapf==0.28.0
+yarl==1.4.2
+zict==1.0.0
+zipp==2.2.0
