pushing lebensmittel script

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,21 +1,18 @@
 [General]
+# Dataset being tested on. It should be located inside `datasets` folder with `ontologies` and `alignments` subdirectories, containing the ontologies and reference alignments respectively.
+dataset = lebensmittel
 # Language of dataset
-language = en
+language = de
 # Value of K in K-fold sliding window in `evaluation.py`
 # Determines splitting of data into training (1-1/K) and validation (1/K) in `train.py`
-K = 7
+K = 5
 # Determines if training data should be split on ontology level (True) or on element level (False)
 # Set to True if you wish to train and test on ontology pairs, or False otherwise (recommended),  as in most cases.
-ontology_split = True
+ontology_split = False
 # Max number of false (dissimilar) examples to take while training
 max_false_examples = 150000
 
 [Paths]
-# This folder should contain owl files of all ontologies in the training set
-train_folder = datasets/conference/ontologies/
-# This folder should contain rdf alignment files of all ontologies in `ontologies_folder`
-# The alignments should be named `a-b.rdf` if it contains the alignments between `a.owl` and `b.owl`
-alignment_folder = datasets/conference/alignments/
 # Paths where trained model should be saved/pre-trained model should be loaded
 save_model_path = models/model.pt
 load_model_path = models/conference_pretrained.pt
@@ -35,8 +32,8 @@ max_paths = 3
 max_pathlen = 5
 # Determines if one-hop neighbours should be taken as a path of length 1 or as a bag of neighbours
 bag_of_neighbours = False
-# Determines if weighted average should be used to obtain unified path representation, or max pooling should be used
-weighted_average = False
+# Determines if weighted sum should be used to obtain unified path representation, or max pooling should be used
+weighted_sum = False
 
 [Hyperparameters]
 # Learning rate
