pushing for freizeit

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,6 +1,6 @@
 [General]
 # Dataset being tested on. It should be located inside `datasets` folder with `ontologies` and `alignments` subdirectories, containing the ontologies and reference alignments respectively.
-dataset = lebensmittel
+dataset = freizeit
 # Language of dataset
 language = de
 # Value of K in K-fold sliding window in `evaluation.py`
