--- a/src/config.ini
+++ b/src/config.ini
@@ -1,14 +1,14 @@
 [General]
 # Dataset being tested on. It should be located inside `datasets` folder with `ontologies` and `alignments` subdirectories, containing the ontologies and reference alignments respectively.
-dataset = freizeit
+dataset = conference
 # Language of dataset
-language = de
+language = en
 # Value of K in K-fold sliding window in `evaluation.py`
 # Determines splitting of data into training (1-1/K) and validation (1/K) in `train.py`
-K = 5
+K = 7
 # Determines if training data should be split on ontology level (True) or on element level (False)
 # Set to True if you wish to train and test on ontology pairs, or False otherwise (recommended),  as in most cases.
-ontology_split = False
+ontology_split = True
 # Max number of false (dissimilar) examples to take while training
 max_false_examples = 150000
 
@@ -27,9 +27,9 @@ has_spellcheck = False
 
 [Parameters]
 # Max neighbours to consider near a node
-max_paths = 3
+max_paths = 5
 # Min neighbours a node should have to be considered
-max_pathlen = 5
+max_pathlen = 6
 # Determines if one-hop neighbours should be taken as a path of length 1 or as a bag of neighbours
 bag_of_neighbours = False
 # Determines if weighted sum should be used to obtain unified path representation, or max pooling should be used
