SEALS script with cached embeddings loaded

--- a/src/config.ini
+++ b/src/config.ini
@@ -16,6 +16,8 @@ max_false_examples = 150000
 # Paths where trained model should be saved/pre-trained model should be loaded
 save_model_path = models/model.pt
 load_model_path = models/conference_pretrained.pt
+# Path where embedding cache is stored (optional)
+embedding_cache_path = models/cached_embeddings.pkl
 # Path where final alignments should be saved
 output_folder = output/
 
