Changed config for conf

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,11 +1,11 @@
 [General]
 # Dataset being tested on. It should be located inside `datasets` folder with `ontologies` and `alignments` subdirectories, containing the ontologies and reference alignments respectively.
-dataset = multifarm
+dataset = conference
 # Language of dataset
-language = de
+language = en
 # Value of K in K-fold sliding window in `evaluation.py`
 # Determines splitting of data into training (1-1/K) and validation (1/K) in `train.py`
-K = 7
+K = 5
 # Determines if training data should be split on ontology level (True) or on element level (False)
 # Set to True if you wish to train and test on ontology pairs, or False otherwise (recommended),  as in most cases.
 ontology_split = True
