--- a/src/config.ini
+++ b/src/config.ini
@@ -1,6 +1,8 @@
 [General]
 # Dataset being tested on. It should be located inside `datasets` folder with `ontologies` and `alignments` subdirectories, containing the ontologies and reference alignments respectively.
 dataset = conference
+# Set to True to minimize data preprocessing to run the code quickly
+quick_mode = True
 # Language of dataset
 language = en
 # Value of K in K-fold sliding window in `evaluation.py`
