--- a/src/config.ini
+++ b/src/config.ini
@@ -2,9 +2,7 @@
 # Dataset being tested on. It should be located inside `datasets` folder with `ontologies` and `alignments` subdirectories, containing the ontologies and reference alignments respectively.
 dataset = conference
 # Set to True to minimize data preprocessing to run the code quickly
-quick_mode = True
-# Language of dataset
-language = en
+quick_mode = False
 # Value of K in K-fold sliding window in `evaluation.py`
 # Determines splitting of data into training (1-1/K) and validation (1/K) in `train.py`
 K = 5
