--- a/src/config.ini
+++ b/src/config.ini
@@ -1,6 +1,6 @@
 [General]
 # Dataset being tested on. It should be located inside `datasets` folder with `ontologies` and `alignments` subdirectories, containing the ontologies and reference alignments respectively.
-dataset = lebensmittel
+dataset = webdir
 # Set to True to minimize data preprocessing to run the code quickly
 quick_mode = False
 # Value of K in K-fold sliding window in `evaluation.py`
@@ -17,7 +17,7 @@ max_false_examples = 150000
 save_model_path = models/model.pt
 load_model_path = models/conference.pt
 # Path where embedding cache is stored (optional)
-embedding_cache_path = models/cached_embeddings.pkl
+embedding_cache_path = models/cached_embeddin.pkl
 # Path where final alignments should be saved
 output_folder = output/
 
@@ -29,11 +29,11 @@ has_spellcheck = False
 
 [Parameters]
 # Max neighbours to consider near a node
-max_paths = 21
+max_paths = 1
 # Min neighbours a node should have to be considered
 max_pathlen = 8
 # Determines if one-hop neighbours should be taken as a path of length 1 or as a bag of neighbours
-bag_of_neighbours = False
+bag_of_neighbours = True
 # Determines if weighted sum should be used to obtain unified path representation, or max pooling should be used
 weighted_sum = False
 
