Adds feature to save model with best validation loss

--- a/src/config.ini
+++ b/src/config.ini
@@ -16,10 +16,10 @@ max_false_examples = 150000
 
 [Paths]
 # Paths where trained model should be saved/pre-trained model should be loaded
-save_model_path = models/model.pt
-load_model_path = models/conference.pt
+save_model_path = models/model
+load_model_path = models/model_best.pt
 # Path where embedding cache is stored (optional)
-embedding_cache_path = models/cached_embeddings.pkl
+embedding_cache_path = models/some_preexisting_cache.pkl
 # Path where final alignments should be saved
 output_folder = output/
 
@@ -46,3 +46,7 @@ lr = 0.001
 num_epochs = 50
 weight_decay = 0.001
 batch_size = 32
+# Validate every n updates
+validation_interval = 100
+# Early stopping if validation does not improve after n consecutive updates
+patience = 100
